# Protocol-Game-Engine

./: .gitignore  CMakeLists.txt  MyGame.sln  unique.txt
MyGame/: CMakeLists.txt  MyGame.vcxproj  MyGame.vcxproj.filters  MyGameApp.cpp  MyGameApp.h  Unit.cpp  Unit.h  main.cpp
Protocol/: CMakeLists.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Protocol.h  Protocol.vcxproj  Protocol.vcxproj.filters  ProtocolApp.cpp  ProtocolApp.h  ProtocolUtils.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h
Protocol/GLFWimpl/: GlfwImplementation.cpp  GlfwImplementation.h
Protocol/OpenGLimpl/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
